--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -112,6 +112,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:9b1:c300:3044::610;
 set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
@@ -343,11 +344,10 @@ set_real_ip_from 2620:7:6001::ffff:c759:e653;
 set_real_ip_from 2620:7:6001::ffff:c759:e654;
 set_real_ip_from 2620:7:6001::ffff:c759:e655;
 set_real_ip_from 2620:7:6001::ffff:c759:e656;
+set_real_ip_from 2620:7:6001::ffff:c759:e657;
 set_real_ip_from 2620:7:6001::ffff:c759:e658;
 set_real_ip_from 2620:7:6001::ffff:c759:e659;
 set_real_ip_from 2800:ba0:6:c1::4858;
-set_real_ip_from 2a00:1169:11d:10::;
-set_real_ip_from 2a00:1169:11d:db80::;
 set_real_ip_from 2a00:11c0:1c:311::5;
 set_real_ip_from 2a00:11c0:1f:1::55;
 set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
@@ -356,6 +356,7 @@ set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
+set_real_ip_from 2a00:1dc0:caff:178::982b;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
@@ -673,6 +674,7 @@ set_real_ip_from 2a0d:3e83:1:b284::1;
 set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:6a80:3:178::;
 set_real_ip_from 2a0e:97c0:470::30;
+set_real_ip_from 2a0e:b107:dd0::3:ed78:7632;
 set_real_ip_from 2a0e:d602:1:14bc::2;
 set_real_ip_from 2a0e:d602:2:2a2::2;
 set_real_ip_from 2a0e:d602:2:55f::2;
