--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -119,7 +119,6 @@ deny 109.70.100.68;
 deny 109.70.100.69;
 deny 109.70.100.70;
 deny 109.70.100.71;
-deny 118.163.74.160;
 deny 121.78.28.175;
 deny 123.253.35.32;
 deny 125.212.241.131;
@@ -509,7 +508,6 @@ deny 185.241.208.196;
 deny 185.241.208.202;
 deny 185.241.208.204;
 deny 185.241.208.206;
-deny 185.241.208.212;
 deny 185.241.208.54;
 deny 185.241.208.71;
 deny 185.243.218.110;
@@ -813,7 +811,6 @@ deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
 deny 2001:bf0:666::666;
@@ -927,7 +924,6 @@ deny 204.8.96.83;
 deny 204.8.96.84;
 deny 204.8.96.85;
 deny 204.8.96.86;
-deny 204.8.96.87;
 deny 204.8.96.88;
 deny 204.8.96.89;
 deny 205.185.113.180;
@@ -1236,7 +1232,6 @@ deny 2620:7:6001::ffff:c759:e653;
 deny 2620:7:6001::ffff:c759:e654;
 deny 2620:7:6001::ffff:c759:e655;
 deny 2620:7:6001::ffff:c759:e656;
-deny 2620:7:6001::ffff:c759:e657;
 deny 2620:7:6001::ffff:c759:e658;
 deny 2620:7:6001::ffff:c759:e659;
 deny 27.255.75.198;
@@ -1353,6 +1348,7 @@ deny 2a05:541:110:3e::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
 deny 2a05:b0c7:67c6::1;
+deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6b72::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a06:1280:bee1:2::ee12:230;
@@ -1624,7 +1620,6 @@ deny 37.252.255.135;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.97.116.244;
-deny 3.92.13.190;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1760,6 +1755,7 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
+deny 54.175.30.214;
 deny 5.42.66.6;
 deny 5.42.80.232;
 deny 5.42.80.233;
@@ -1779,7 +1775,6 @@ deny 62.182.83.179;
 deny 62.182.84.146;
 deny 64.227.115.78;
 deny 66.146.193.33;
-deny 66.220.242.222;
 deny 66.78.40.147;
 deny 66.78.40.160;
 deny 67.219.109.141;
@@ -1829,6 +1824,7 @@ deny 84.19.182.20;
 deny 84.211.225.54;
 deny 84.239.46.144;
 deny 84.247.165.51;
+deny 84.54.51.61;
 deny 84.54.51.68;
 deny 84.54.51.69;
 deny 85.17.9.83;
