--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -83,7 +83,6 @@ allow 107.189.5.121;
 allow 107.189.5.18;
 allow 107.189.5.19;
 allow 107.189.5.7;
-allow 107.189.6.124;
 allow 107.189.6.57;
 allow 107.189.7.114;
 allow 107.189.7.141;
@@ -509,7 +508,9 @@ allow 185.241.208.196;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
-allow 185.241.208.212;
+allow 185.241.208.232;
+allow 185.241.208.236;
+allow 185.241.208.243;
 allow 185.241.208.54;
 allow 185.241.208.71;
 allow 185.243.218.110;
@@ -662,6 +663,7 @@ allow 195.176.3.19;
 allow 195.176.3.20;
 allow 195.176.3.23;
 allow 195.176.3.24;
+allow 195.234.63.128;
 allow 195.26.247.0;
 allow 195.80.151.242;
 allow 195.88.74.206;
@@ -813,6 +815,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:9b1:c300:3044::610;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -1353,7 +1356,6 @@ allow 2a05:541:110:3e::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67c6::1;
-allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6b72::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
@@ -1625,7 +1627,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.194.47.99;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1731,6 +1732,7 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.205.150.207;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1778,6 +1780,7 @@ allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.83.179;
 allow 62.182.84.146;
+allow 62.63.244.28;
 allow 64.227.115.78;
 allow 66.146.193.33;
 allow 66.220.242.222;
@@ -1830,7 +1833,6 @@ allow 84.19.182.20;
 allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.247.165.51;
-allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
