--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -83,7 +83,6 @@ set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.18;
 set_real_ip_from 107.189.5.19;
 set_real_ip_from 107.189.5.7;
-set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.6.57;
 set_real_ip_from 107.189.7.114;
 set_real_ip_from 107.189.7.141;
@@ -509,7 +508,9 @@ set_real_ip_from 185.241.208.196;
 set_real_ip_from 185.241.208.202;
 set_real_ip_from 185.241.208.204;
 set_real_ip_from 185.241.208.206;
-set_real_ip_from 185.241.208.212;
+set_real_ip_from 185.241.208.232;
+set_real_ip_from 185.241.208.236;
+set_real_ip_from 185.241.208.243;
 set_real_ip_from 185.241.208.54;
 set_real_ip_from 185.241.208.71;
 set_real_ip_from 185.243.218.110;
@@ -662,6 +663,7 @@ set_real_ip_from 195.176.3.19;
 set_real_ip_from 195.176.3.20;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
+set_real_ip_from 195.234.63.128;
 set_real_ip_from 195.26.247.0;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
@@ -813,6 +815,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:9b1:c300:3044::610;
 set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
@@ -1353,7 +1356,6 @@ set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
-set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6b72::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
@@ -1625,7 +1627,6 @@ set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.194.47.99;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1731,6 +1732,7 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
+set_real_ip_from 52.205.150.207;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
@@ -1778,6 +1780,7 @@ set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.83.179;
 set_real_ip_from 62.182.84.146;
+set_real_ip_from 62.63.244.28;
 set_real_ip_from 64.227.115.78;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
@@ -1830,7 +1833,6 @@ set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.165.51;
-set_real_ip_from 84.54.51.61;
 set_real_ip_from 84.54.51.68;
 set_real_ip_from 84.54.51.69;
 set_real_ip_from 85.17.9.83;
