--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,6 +1,5 @@
 allow 102.130.113.9;
 allow 102.130.117.167;
-allow 102.130.127.117;
 allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
@@ -165,10 +164,8 @@ allow 162.247.74.204;
 allow 162.247.74.206;
 allow 162.247.74.213;
 allow 162.247.74.216;
-allow 162.247.74.217;
 allow 162.247.74.27;
 allow 162.247.74.7;
-allow 162.247.74.74;
 allow 162.251.5.152;
 allow 163.172.45.102;
 allow 163.5.143.76;
@@ -558,7 +555,6 @@ allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
 allow 191.252.220.31;
-allow 191.96.165.34;
 allow 192.42.116.14;
 allow 192.42.116.15;
 allow 192.42.116.17;
@@ -815,7 +811,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
-allow 2001:9b1:c300:3044::610;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -930,7 +925,6 @@ allow 204.8.96.83;
 allow 204.8.96.84;
 allow 204.8.96.85;
 allow 204.8.96.86;
-allow 204.8.96.87;
 allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
@@ -1239,7 +1233,6 @@ allow 2620:7:6001::ffff:c759:e653;
 allow 2620:7:6001::ffff:c759:e654;
 allow 2620:7:6001::ffff:c759:e655;
 allow 2620:7:6001::ffff:c759:e656;
-allow 2620:7:6001::ffff:c759:e657;
 allow 2620:7:6001::ffff:c759:e658;
 allow 2620:7:6001::ffff:c759:e659;
 allow 27.255.75.198;
@@ -1356,6 +1349,7 @@ allow 2a05:541:110:3e::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6b72::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
@@ -1627,6 +1621,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.194.6.103;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1669,7 +1664,6 @@ allow 45.151.167.11;
 allow 45.151.167.12;
 allow 45.151.167.13;
 allow 45.15.157.177;
-allow 45.158.76.62;
 allow 45.33.20.42;
 allow 45.56.104.167;
 allow 45.61.184.47;
@@ -1712,8 +1706,6 @@ allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.38.255.27;
 allow 50.116.60.12;
-allow 50.3.182.133;
-allow 50.3.182.156;
 allow 51.15.249.160;
 allow 51.15.59.15;
 allow 51.158.115.62;
@@ -1732,7 +1724,6 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.205.150.207;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1780,7 +1771,6 @@ allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.83.179;
 allow 62.182.84.146;
-allow 62.63.244.28;
 allow 64.227.115.78;
 allow 66.146.193.33;
 allow 66.220.242.222;
@@ -1833,6 +1823,7 @@ allow 84.19.182.20;
 allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.247.165.51;
+allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
